Thu Oct 29 13:12:01 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * dance/DomainApplicationManager/Node_Locator.cpp
        * dance/DomainApplicationManager/Node_Locator.h
        * dance/DAnCE_Properties.idl
        Add check on property name and resourceType for Node address in cdd file.

        * dance/DAnCE_Utility.h
        * dance/DAnCE_Utility.cpp
        Add get_satisfierproperty_value   

Thu Oct 29 11:08:01 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * dance/DomainApplicationManager/DomainApplicationManager.mpc:
        Add missing dance_config_handlers.

Thu Oct 28 12:33:01 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * MPC/config/dance_domainapplicationmanager.mpb:
        * dance/DomainApplicationManager/Node_Locator.cpp:
        * dance/DomainApplicationManager/Node_Locator.h:
        * dance/ExecutionManager/ExecutionManager_Impl.cpp:
        * dance/ExecutionManager/ExecutionManager_Module.cpp:
        * dance/ExecutionManager/ExecutionManager_Impl.h:
        * dance/ExecutionManager/ExecutionManager_Module.h:
        Add posibility to the Node_Locator to use cdd files.


Thu Oct 28 11:36:01 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * dance/Version.h:
          Fixed incorrect DANCE spelling generated by make_release.py.

Wed Oct 27 17:44:42 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/LocalityManager/ExplicitExec/run_test.pl:
        * tests/LocalityManager/ProcessName/run_test.pl:
        * tests/LocalityManager/SpawnMultiple/run_test.pl:
        * tests/LocalityManager/SpawnOne/run_test.pl:
          Fixed typo

        * dance/LocalityManager/Scheduler/Events/Action_Base.cpp:
          Layout changes

        * tools/Artifact_Installation/Artifact_Installation_exec.cpp:
          Initialise pointer with 0

Wed Oct 27 10:38:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ChangeLog:
        * NEWS: